# cervixes

./: LICENSE  README  cervixes.h  conf.c  database.c  dl.c  irc.c  main.c  mk.sh  network.c  template  to.c  utils.c  version.c
msocket/: ChangeLog  Example-client.c  Example-server.c  HOWTO  LICENSE  Makefile  Makefile.in  base64.c  config.status  configure  configure.ac  conn.c  dns.c  file.c  lms.c  localconfig.h  localconfig.h.in  msocket-internal.h  msocket.h  msocketutils.h  mux.c  passwords.c  rand.c  socket.c  ssl.c  str.c
